<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoRootFirewall</string>
    <string name="enable_firewall">Enable Firewall</string>
    <string name="security_settings">Security Settings</string>
    <string name="filtering_activity">Filtering List</string>
    <string name="ipv6_packets_captured">IPv6 packets cannot be handled by the app</string>
    <string name="disable_firewall_to_proceeed">Please disable the firewall to allow the traffic</string>
    <string name="empty_list">The list is empty</string>
    <string name="port">Port</string>

    <!-- FILTERING PREFERENCES -->
    <string name="filtering_mode">Filtering mode</string>
    <string name="filtering_mode_key" translatable="false">filtering_mode_key</string>
    <!-- Human-readable titles -->
    <string name="black_list_title">Black List</string>
    <string name="white_list_title">White List</string>

    <string-array name="filtering_mode_titles">
        <item>@string/black_list_title</item>
        <item>@string/white_list_title</item>
    </string-array>

    <!-- Summaries -->
    <string-array name="filtering_mode_entries_summary">
        <item>Connections with the blacklisted addresses will not be established</item>
        <item>Connections with the whitelisted addresses only</item>
    </string-array>

    <!-- Values -->
    <string name="filtering_mode_black_list_value">Black_list</string>
    <string name="filtering_mode_white_list_value">White_list</string>

    <string-array name="filtering_mode_values">
        <item>@string/filtering_mode_black_list_value</item>
        <item>@string/filtering_mode_white_list_value</item>
    </string-array>

    <!-- CONNECTION PREFERENCES -->
    <string name="connection_preference">Connection type</string>
    <string name="connection_preference_key" translatable="false">connection_preference_key</string>
    <!-- Human-readable titles -->
    <string name="wifi_only">Wi-Fi only</string>
    <string name="wifi_and_mobile">Wi-Fi and mobile data</string>

    <string-array name="connection_preference_titles">
        <item>@string/wifi_only</item>
        <item>@string/wifi_and_mobile</item>
    </string-array>

    <!-- Summaries -->
    <string-array name="connection_preference_entries_summary">
        <item>@string/wifi_only</item>
        <item>@string/wifi_and_mobile</item>
    </string-array>

    <!-- Values -->
    <string name="connection_preference_wifi_value">Wifi</string>
    <string name="connection_preference_wifi_and_mobile_data_value">Wifi_Mobile</string>

    <string-array name="connection_preference_mode_values">
        <item>@string/connection_preference_wifi_value</item>
        <item>@string/connection_preference_wifi_and_mobile_data_value</item>
    </string-array>

    <!-- Contextual action mode in FilteringActivity -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="select_all">Select All</string>

    <!-- Connection directions -->
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>

    <!-- Connection policy values -->
    <string name="allowed">Allowed</string>
    <string name="forbidden">Forbidden</string>

    <!-- The Add dialog -->
    <string name="add_new_policy">Add a new policy</string>
    <string name="add_button">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ip_address">IP address</string>
    <string name="invalid_ip_address">Invalid IP address</string>
    <string name="invalid_port_number">Invalid port number</string>

    <!-- CAB -->
    <string name="selected">Выбрано: %d</string>

</resources>